--- a/class_test.html
+++ b/class_test.html
@@ -384,8 +384,11 @@
 				var _kernel_initializer = "leCunNormal";
 				var _bias_initializer = "leCunNormal";
 
+
+				asanai.set_validation_split(0.1);
+
 				var new_model_struct = [
-					{conv2d: {filters: 4, kernelSize: [3, 3], inputShape: [30, 30, 3], activation: "relu", kernelInitializer: _kernel_initializer, biasInitializer: _bias_initializer}},
+					{conv2d: {filters: 4, kernelSize: [3, 3], inputShape: [40, 40, 3], activation: "relu", kernelInitializer: _kernel_initializer, biasInitializer: _bias_initializer}},
 					{conv2d: {filters: 1, kernelSize: [3, 3], activation: "relu", kernelInitializer: _kernel_initializer, biasInitializer: _bias_initializer}},
 					{flatten: {}},
 					{dense: {units: 5, activation: "relu", kernelInitializer: _kernel_initializer, biasInitializer: _bias_initializer}},
