added opacity fix

--- a/class_test.html
+++ b/class_test.html
@@ -43,6 +43,10 @@
 			#plotly_time_per_batch {
 				display: none;
 			}
+
+			#canvas_grid_visualization {
+				opacity: 1;
+			}
 		</style>
 	</head>
 	<body>
