larger language icons

--- a/class_test.html
+++ b/class_test.html
@@ -217,6 +217,8 @@
 				//asanai.hide_internals();
 
 				// draw_fcnn shows the FCNN style visualization the a div with the provided ID.
+				asanai.set_fcnn_width(1200);
+				asanai.set_fcnn_height(400);
 				asanai.draw_fcnn("fcnn_div");
 
 				// Shows the output of model.summary in a div.
