larger language icons

--- a/class_test.html
+++ b/class_test.html
@@ -224,7 +224,7 @@
 				// Shows the output of model.summary in a div.
 				asanai.write_model_summary("summary")
 
-				//asanai.show_and_predict_webcam_in_div("webcam_prediction");
+				asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
 				await asanai.predict_image("test_image", "test_image_prediction", true, true);
 				await asanai.predict_image("test_image_two", "test_image_two_prediction", true, true);
