--- a/class_test.html
+++ b/class_test.html
@@ -219,7 +219,7 @@
 				// draw_fcnn shows the FCNN style visualization the a div with the provided ID.
 				asanai.set_fcnn_width(1200);
 				asanai.set_fcnn_height(400);
-				asanai.draw_fcnn("fcnn_div");
+				asanai.draw_fcnn("fcnn_div", 32, true);
 
 				// Shows the output of model.summary in a div.
 				asanai.write_model_summary("summary")
