--- a/class_test.html
+++ b/class_test.html
@@ -185,6 +185,8 @@
 					//math_tab_code_div: "math_tab_code"			// When commented in, this looks for a div with the id `math_tab_code`, and automatically writes the math mode contents to it.
 				});
 
+				asanai.enable_fcnn_internals();
+
 				asanai.disable_show_bars(); // # enables text to be shown instead of bars in predictions, not needed if you dont want this
 
 				// This sets the mode, there is expert and beginner. This is not used anywhere (yet)
