--- a/manual.html
+++ b/manual.html
@@ -1851,7 +1851,7 @@ The target shape can be specified by providing a tuple of integers which defines
 <br>
 			This can be used to force the network train to learn a shape instead of, for example, just colors.
 <br>
-			If chosen, and <a href="Auto_rotate_images">Auto rotate images</a> is also chosen, each rotated image will also be inverted.
+			If chosen, and <a href="#Auto_rotate_images">Auto rotate images</a> is also chosen, each rotated image will also be inverted.
 <br>
 			<img src="manual/rotate_invert.png">
 <br>
