--- a/class_test.html
+++ b/class_test.html
@@ -219,6 +219,11 @@
 				// Hide internals, when called, hides the internals again after they've been shown
 				//asanai.hide_internals();
 
+				// Set FCNN rescale factor
+				asanai.set_rescale_factor(3);
+				// Set FCNN layer spacing add
+				asanai.set_layer_spacing_add(60);
+
 				// draw_fcnn shows the FCNN style visualization the a div with the provided ID.
 				asanai.set_fcnn_width(1200);
 				asanai.set_fcnn_height(400);
