--- a/manual.html
+++ b/manual.html
@@ -33,7 +33,7 @@
 		<style>
 			body {
 				font-family: sans-serif;
-				background-color: #e5e5e5;
+				background-color: #f3f3f3;
 			}
 			.container{
 				margin: 20px auto;
