removed own csv 3

--- a/manual.html
+++ b/manual.html
@@ -285,11 +285,7 @@ x_1, x_2, x_3, y_1, y_2, y_3
 </pre>
 			<img src="manual/own_csv_2.png" />
 <br>
-			The the header-to-training-data-section you can specify which columns (defined by their title in the very first line) should belong to the Input and which ones should belong to the output.
-<br>
-			<img src="manual/own_csv_3.png" />
-<br>
-			After specifying this, on the right, a preview of how the tensors will look like like.
+			The the header-to-training-data-section you can specify which columns (defined by their title in the very first line) should belong to the Input and which ones should belong to the output. After specifying this, on the right, a preview of how the tensors will look like like.
 <br>
 			The input and output shapes are changed automatically according to the data type and the constructed network.
 <br>
