width for manual

--- a/manual.html
+++ b/manual.html
@@ -1928,13 +1928,13 @@ The target shape can be specified by providing a tuple of integers which defines
 			<img src="manual/theme_choser.png">
 <br>
 			<h3>Light-Mode</h3>
-			<img style="width: 90%" src="manual/lightmode.png">
+			<img style="max-width: 90%" src="manual/lightmode.png">
 <br>
 			<h3>Dark-Mode</h3>
-			<img style="width: 90%" src="manual/darkmode.png">
+			<img style="max-width: 90%" src="manual/darkmode.png">
 <br>
 			<h3>Natural-Mode</h3>
-			<img style="width: 90%" src="manual/naturalmode.png">
+			<img style="max-width: 90%" src="manual/naturalmode.png">
 			<h2>Backend</h2>
 			TensorFlow.js inside asanAI provides two backends for performing computations: CPU and WebGL. By default, it tries to use WebGL, but automatically falls back to CPU if WebGL is not available.
 			<h3>CPU</h3>
