--- a/manual.html
+++ b/manual.html
@@ -207,7 +207,7 @@
 		<div id="toc"></div>
 		<div id="contents">
 			<h2>General outline</h2>
-			asanAI offers a simple way of creating sequential neural networks and train them on your own data, from within the browser. It allows you to visualize a lot of different intermediate steps. You can, when done training, also <a href="#Export">export</a> the trained model to Python and NodeJS.
+			asanAI offers a simple way of creating sequential neural networks and train them on your own data, from within the browser. It allows you to visualize a lot of different intermediate steps. You can, when done training, also <a href="#Export">export</a> the trained model to Python and HTML/JS.
 			<h2>Quickstart</h2>
 			<h3>GUI Basics</h3>
 			<img src="manual/ribbon.png" />
