--- a/manual.html
+++ b/manual.html
@@ -2005,7 +2005,7 @@ The target shape can be specified by providing a tuple of integers which defines
 			When overfitting occurs, the training loss will continue to decrease while the validation loss plateaus or increases. This is because the model is becoming increasingly specialized to the training data and is not generalizing well to new, unseen data. This will be visible in the graph as a divergence between the training loss and validation loss. The training loss will be low and continue to decrease, while the validation loss will be higher and not decrease or even increase.
 
 			<br>
-			<img src="manual/overfitting.png" />
+			<img src="manual/overfitting_2.png" />
 			<br>
 			This graph also shows overfitting, but only after roughly epoch 10.
 
