--- a/manual.html
+++ b/manual.html
@@ -35,6 +35,9 @@
 				font-family: sans-serif;
 				background-color: #f3f3f3;
 			}
+			.white_bg_image {
+				mix-blend-mode: darken;
+			}
 			.container{
 				margin: 20px auto;
 				width:100px;
@@ -241,7 +244,7 @@
 <br>
 			You will then see graphs like these:
 <br>
-			<img src="manual/train_graph_ok.png" />
+			<img class="white_bg_image" src="manual/train_graph_ok.png" />
 <br>
 			For now only the topmost graph is important. The two lines are the <a href="#Loss">Loss</a> and <a href="#Validation_Loss">Validation-Loss</a>.
 <br>
@@ -1978,43 +1981,43 @@ The target shape can be specified by providing a tuple of integers which defines
 			The CPU backend uses the JavaScript implementation of TensorFlow operations to perform computations on the CPU. It is compatible with all web browsers and can be used to run models on machines without a GPU. However, it may be slower than using a GPU backend.
 			<h3>GPU</h3>
 			The WebGL backend uses the WebGL API to perform computations on the GPU. It is compatible with most modern web browsers, but requires the user's device to have a compatible GPU. The WebGL backend can provide a significant performance boost over the CPU backend, especially for large models and datasets. The WebGL backend is not available on all platforms, like iOS.
-<br>
+			<br>
 			In general, using the WebGL backend can speed up the computation and make it possible to run large models on the browser, whereas using the CPU backend makes the models run on any browser but with a lower performance.
 			If the batch size is too small, it may even be slower than CPU.
 			<h2>Help for your own neural network</h2>
 			<h3>Interpretating the training graph</h3>
 			<h4>Good loss</h4>
 			Good losses look like the next two ones. In each of these, both losses go down and a very similiar to each other. It's hard to say if the network is trained enough with these, because the exact meaning of the loss depends heavily on the problem and the data, but you can test in the <a href="#Predict">Predict-Tab</a> and if it is good enough, you can stop training. If not, continue training or add new layers or neurons/filters to your network.
-<br>
-			<img src="manual/loss_ok.png" />
+			<br>
+			<img class="white_bg_image" src="manual/loss_ok.png" />
 <br>
 			<h4>Stopped learning</h4>
 			This graph shows that the learning process has basically stopped. It fluctuates around a certain point (see graph 2), but does not really learn anything new.
 <br>
-			<img src="manual/stopped_learning.png" />
+			<img class="white_bg_image" src="manual/stopped_learning.png" />
 <br>
 			Here, you can see that <a href="#Math_Mode_while_training">Math mode</a> matrices are mostly black. Black indicates that nothing has changed since the last epoch. The ones that aren't black fluctuate wildly between red and green, i.e. the minimum has been found and each batch, tiny values values are added or substracted. If your network already works well enough, you can stop training. Otherwise, please try to add more layers or more neurons/filters. You may also try to change the step size of the <a href="#Optimizer">optimizer</a>.
 <br>
-			<img src="manual/stopped_training.gif" />
+			<img class="white_bg_image" src="manual/stopped_training.gif" />
 <br>
 			<h4>Overfitting Loss</h4>
-			<img src="manual/overfitting.png" />
+			<img class="white_bg_image" src="manual/overfitting.png" />
 
 			<br>
 			When overfitting occurs, the training loss will continue to decrease while the validation loss plateaus or increases. This is because the model is becoming increasingly specialized to the training data and is not generalizing well to new, unseen data. This will be visible in the graph as a divergence between the training loss and validation loss. The training loss will be low and continue to decrease, while the validation loss will be higher and not decrease or even increase.
 
 			<br>
-			<img src="manual/overfitting_2.png" />
+			<img class="white_bg_image" src="manual/overfitting_2.png" />
 			<br>
 			This graph also shows overfitting, but only after roughly epoch 10.
 
 			<h4>No more improvements</h4>
 <br>
-			<img src="manual/no_improvement_2.png" />
+			<img class="white_bg_image" src="manual/no_improvement_2.png" />
 <br>
 			This graph looks almost like there is any change, but look at the left. All change is in a miniscule area, so basically the line is flat, but it looks like it's not at this scale.
 <br>
-			<img src="manual/no_real_improvement.png" />
+			<img class="white_bg_image" src="manual/no_real_improvement.png" />
 			<h3>Network Structures</h3>
 			In image classification problems, a common approach is to use a combination of convolutional layers (conv2d) and dense layers, along with other layers such as flatten and dropout.
 <br>
