--- a/manual.html
+++ b/manual.html
@@ -1856,7 +1856,7 @@ The target shape can be specified by providing a tuple of integers which defines
 <br>
 			These are the four types of augmentation:
 <br>
-			<h3>Auto rotate images?</h3>
+			<h3 id='auto_rotate_images'>Auto rotate images?</h3>
 <br>
 			<img src="manual/rotate1.png"><img src="manual/rotate2.png"><img src="manual/rotate3.png"><img src="manual/rotate4.png"><img src="manual/rotate5.png">
 <br>
@@ -1868,7 +1868,7 @@ The target shape can be specified by providing a tuple of integers which defines
 <br>
 			This can be used to force the network train to learn a shape instead of, for example, just colors.
 <br>
-			If chosen, and <a href="#Auto_rotate_images">Auto rotate images</a> is also chosen, each rotated image will also be inverted.
+			If chosen, and <a href="#auto_rotate_images">Auto rotate images</a> is also chosen, each rotated image will also be inverted.
 <br>
 			<img src="manual/rotate_invert.png">
 <br>
