math mode added

--- a/manual.html
+++ b/manual.html
@@ -1903,6 +1903,8 @@ The target shape can be specified by providing a tuple of integers which defines
 				<li>Optimization: The user can use the mode to identify and optimize specific layers or parts of the network that may be causing performance issues.</li>
 			</ul>
 
+			<img src="manual/math_mode.png">
+
 			<h4>Math Mode while training</h4>
 			When in math mode while the network is training, you can follow how the weights are changing after each batch.
 			$$
