use camera icon from svg

--- a/manual.html
+++ b/manual.html
@@ -237,7 +237,7 @@
 			<h2>Train on images from webcam</h2>
 			The quickest and easiest way to create a neural network is to simply use images from the webcam.
 <br>
-			Click on the camera icon &#128248; in the top-left of the ribbon.
+			Click on the camera icon <img height=32 src='_gui/camera.svg' /> in the top-left of the ribbon.
 <br>
 			<img src="manual/camera_icon.png" />
 <br>
